--- a/video-background/index.html
+++ b/video-background/index.html
@@ -10,18 +10,20 @@
 </head>
 
 <body>
-    <h1>Video Background</h1>
     <header>
-        <video class="video-container" controls muted autoplay loop>
-        <source src="./Cat - 66004.mp4" type="video/mp4">
-    </video>
+        <video id="myVideo" class="video-container" muted autoplay loop>
+            <source src="./Cat - 66004.mp4" type="video/mp4">
+        </video>
     </header>
-    <label class="switch">
-        <input type="checkbox" id="check">
-        <span class="slider round"></span>
-    </label>
+    <div class="content">
+        <label class="switch">
+            <input type="checkbox" id="check">
+            <span class="slider "></span>
+        </label>
+    </div>
+    <h1>Video Project</h1>
 
-    <script src="script.js"></script>
+    <script src="script.js "></script>
 </body>
 
 </html>
