--- a/countdown/index.html
+++ b/countdown/index.html
@@ -7,12 +7,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Countdown</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/ionicons/2.0.1/css/ionicons.min.css">
 </head>
 
 <body>
     <div class="grid">
         <div class="header">
-            <div class="topnav" id="mytopnav">
+            <!--<div class="topnav" id="mytopnav">
                 <a class="active" href="home.html">Home</a>
                 <a href="news.html">News</a>
                 <a href="contact.html">Contact</a>
@@ -20,15 +21,32 @@
                     <i class="fa fa-bars"></i>
                 </a>
             </div>
+            -->
+            <h2>Mimi's Mini JS Projects</h2>
         </div>
         <div class="main">
-
+            <h2>Using CSS Grid</h2>
+            <h2>Using CSS Grid</h2>
+            <h2>Using CSS Grid</h2>
+            <h2>Using CSS Grid</h2>
         </div>
         <div class="sidebar">
-            <h1>sidebar</h1>
+            <a href="/countdown/index.html">Home</a>
+            <a href="/counter/index.html">Counter</a>
+            <a href="/reviews-page/index.html">Reviews</a>
+            <a href="/video-background/index.html">Video background</a>
         </div>
         <div class="footer">
-            <h1>footer</h1>
+            <div class="social">
+                <a href="https://github.com/MariaHr8">
+                    <i class="icon ion-social-github"></i></a>
+                <a href="https://www.pinterest.com/mimkabibka">
+                    <i class="icon ion-social-pinterest"></i></a>
+                <a href="https://www.linkedin.com/in/maria-hristova-baa523188/">
+                    <i class="icon ion-social-linkedin"></i>
+                </a>
+            </div>
+
         </div>
     </div>
     <script src="script.js"></script>
